modified:   Sprint1/Task1.ipynb 	modified:   Sprint1/Task2.ipynb 	modified:   Sprint2/Task0.ipynb 	modified:   Sprint2/Task1.ipynb 	modified:   Sprint2/Task2.ipynb 	modified:   Sprint3/Task0.ipynb 	modified:   Sprint3/Task1.ipynb 	modified:   Sprint3/Task2.ipynb 	modified:   Sprint4/Task0.ipynb 	modified:   Sprint4/Task1.ipynb 	modified:   Sprint4/Task2.ipynb 	modified:   Sprint5/Task0.ipynb 	modified:   Sprint5/Task1.ipynb 	modified:   Sprint5/Task2.ipynb

--- a/Sprint1/Task2.ipynb
+++ b/Sprint1/Task2.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -245,8 +245,127 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кот: Рина, Ленивось: True\n",
+      "мур.\n",
+      "Рина спит весь день.\n",
+      "\n",
+      "Собака: Лаки, Порода: Лабрадор\n",
+      "гав.\n",
+      "Лаки наблюдает за птицей\n",
+      "\n",
+      "Лаки взаимодействует с Рина\n",
+      "\n",
+      "Общее количество животных: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    private static int animalCount = 0;\n",
+    "\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "\n",
+    "    public Animal()\n",
+    "    {\n",
+    "        animalCount++;\n",
+    "    }\n",
+    "    \n",
+    "    public static int GetAnimalCount()\n",
+    "    {\n",
+    "        return animalCount;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine(\"животный звук.\");\n",
+    "    }\n",
+    "\n",
+    "    public void InteractWith(Animal otherAnimal)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} взаимодействует с {otherAnimal.Name}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    private bool lazy { get; set; }\n",
+    "\n",
+    "    public bool IsLazy\n",
+    "    {\n",
+    "        get { return lazy; }\n",
+    "        set { lazy = value; }\n",
+    "    }\n",
+    "\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine(\"мур.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Activity()\n",
+    "    {\n",
+    "        if (IsLazy)\n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} спит весь день.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} активная и игривая.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine(\"гав.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Fetch(string item)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} наблюдает за {item}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "Cat myCat = new Cat();\n",
+    "Dog myDog = new Dog();\n",
+    "\n",
+    "myCat.Name = \"Рина\";\n",
+    "myCat.Age = 3;\n",
+    "myCat.IsLazy = true;\n",
+    "\n",
+    "myDog.Name = \"Лаки\";\n",
+    "myDog.Age = 4;\n",
+    "myDog.Breed = \"Лабрадор\";\n",
+    "\n",
+    "\n",
+    "// Выводим информацию о животных\n",
+    "Console.WriteLine($\"Кот: {myCat.Name}, Ленивось: {myCat.IsLazy}\");\n",
+    "myCat.MakeSound();\n",
+    "myCat.Activity();\n",
+    "Console.WriteLine();\n",
+    "Console.WriteLine($\"Собака: {myDog.Name}, Порода: {myDog.Breed}\");\n",
+    "myDog.MakeSound();\n",
+    "myDog.Fetch(\"птицей\");\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "// Взаимодействие между объектами\n",
+    "myDog.InteractWith(myCat);\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "// Выводим количество созданных животных\n",
+    "Console.WriteLine($\"Общее количество животных: {Animal.GetAnimalCount()}\");"
+   ]
   }
  ],
  "metadata": {
