--- a/Sprint2/Task0.ipynb
+++ b/Sprint2/Task0.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -244,8 +244,116 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Имя: Рина, Возраст: 3 лет\n",
+      "Цвет шерсти: Серый\n",
+      "Имя: Лаки, Возраст: 4 лет\n",
+      "Порода: Лабрадор\n",
+      "Имя: Гуми, Возраст: 3 лет\n",
+      "Вид: Лори\n",
+      "Имя: Баблз, Возраст: 1 лет\n",
+      "Тип воды: Пресная\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "\n",
+    "    public Animal(string name, int age)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "        Age = age;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Имя: {Name}, Возраст: {Age} лет\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public string FurColor { get; set; }\n",
+    "\n",
+    "    public Cat(string name, int age, string furColor) : base(name, age)\n",
+    "    {\n",
+    "        FurColor = furColor;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Цвет шерсти: {FurColor}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public Dog(string name, int age, string breed) : base(name, age)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Порода: {Breed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public string Species { get; set; }\n",
+    "\n",
+    "    public Bird(string name, int age, string species) : base(name, age)\n",
+    "    {\n",
+    "        Species = species;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Вид: {Species}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Fish : Animal\n",
+    "{\n",
+    "    public string WaterType { get; set; }\n",
+    "\n",
+    "    public Fish(string name, int age, string waterType) : base(name, age)\n",
+    "    {\n",
+    "        WaterType = waterType;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Тип воды: {WaterType}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Cat myCat = new Cat(\"Рина\", 3, \"Серый\");\n",
+    "myCat.DisplayInfo(); \n",
+    "\n",
+    "Dog myDog = new Dog(\"Лаки\", 4, \"Лабрадор\");\n",
+    "myDog.DisplayInfo();\n",
+    "\n",
+    "Bird myBird = new Bird(\"Гуми\", 3, \"Лори\");\n",
+    "myBird.DisplayInfo(); \n",
+    "\n",
+    "Fish myFish = new Fish(\"Баблз\", 1, \"Пресная\");\n",
+    "myFish.DisplayInfo(); "
+   ]
   }
  ],
  "metadata": {
