--- a/Sprint2/Task1.ipynb
+++ b/Sprint2/Task1.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -272,8 +272,165 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Имя: Пулька, Возраст: 3\n",
+      "\n",
+      "Имя: Рина, Возраст: 3\n",
+      "Цвет шерсти: серый\n",
+      "Рина мяукает: мяу.\n",
+      "\n",
+      "Имя: Лаки, Возраст: 4\n",
+      "Порода: Лабрадор\n",
+      "Лаки лает: гав.\n",
+      "\n",
+      "Имя: Пантера, Возраст: 5\n",
+      "Цвет шерсти: черный\n",
+      "Среда обитания: джунгли\n",
+      "Пантера мяукает: мяу.\n",
+      "Пантера рычит: ррр.\n",
+      "\n",
+      "Имя: Керми, Возраст: 4\n",
+      "Порода: Борзой\n",
+      "Навык охоты: погоня\n",
+      "Керми лает: гав.\n",
+      "Керми охотится с использованием навыка: погоня\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "\n",
+    "    public Animal(string name, int age)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "        Age = age;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Имя: {Name}, Возраст: {Age}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public string FurColor { get; set; }\n",
+    "\n",
+    "    public Cat(string name, int age, string furColor) : base(name, age)\n",
+    "    {\n",
+    "        FurColor = furColor;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Цвет шерсти: {FurColor}\");\n",
+    "    }\n",
+    "\n",
+    "    public void Meow()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} мяукает: мяу.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class WildCat : Cat\n",
+    "{\n",
+    "    public string Habitat { get; set; }\n",
+    "\n",
+    "    public WildCat(string name, int age, string furColor, string habitat) \n",
+    "        : base(name, age, furColor)\n",
+    "    {\n",
+    "        Habitat = habitat;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Среда обитания: {Habitat}\");\n",
+    "    }\n",
+    "\n",
+    "    public void Roar()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} рычит: ррр.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public Dog(string name, int age, string breed) : base(name, age)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Порода: {Breed}\");\n",
+    "    }\n",
+    "\n",
+    "     public void Bark()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} лает: гав.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class HuntingDog : Dog\n",
+    "{\n",
+    "    public string HuntingSkill { get; set; }\n",
+    "\n",
+    "    public HuntingDog(string name, int age, string breed, string huntingSkill) \n",
+    "        : base(name, age, breed)\n",
+    "    {\n",
+    "        HuntingSkill = huntingSkill;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Навык охоты: {HuntingSkill}\");\n",
+    "    }\n",
+    "\n",
+    "    public void Hunt()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} охотится с использованием навыка: {HuntingSkill}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// экземпляры классов\n",
+    "Animal animal = new Animal(\"Пулька\", 3);\n",
+    "animal.DisplayInfo();\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "Cat myCat = new Cat(\"Рина\", 3, \"серый\");\n",
+    "myCat.DisplayInfo();\n",
+    "myCat.Meow();\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "Dog myDog = new Dog(\"Лаки\", 4, \"Лабрадор\");\n",
+    "myDog.DisplayInfo();\n",
+    "myDog.Bark();\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "WildCat myWildCat = new WildCat(\"Пантера\", 5, \"черный\", \"джунгли\");\n",
+    "myWildCat.DisplayInfo();\n",
+    "myWildCat.Meow(); // Унаследованный метод от Cat\n",
+    "myWildCat.Roar(); // Уникальный метод для WildCat\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "HuntingDog myHuntingDog = new HuntingDog(\"Керми\", 4, \"Борзой\", \"погоня\");\n",
+    "myHuntingDog.DisplayInfo();\n",
+    "myHuntingDog.Bark(); // Унаследованный метод от Dog\n",
+    "myHuntingDog.Hunt(); // Уникальный метод для HuntingDog"
+   ]
   }
  ],
  "metadata": {
