--- a/Sprint2/Task2.ipynb
+++ b/Sprint2/Task2.ipynb
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -413,8 +413,108 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Лаки лает.\n",
+      "Лаки идет на прогулку.\n",
+      "Рина мурчит.\n",
+      "Рина крадется.\n",
+      "Гуми смеётся.\n",
+      "Гуми летает по комнате.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public abstract class Animal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "\n",
+    "    protected Animal(string name, int age)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "        Age = age;\n",
+    "    }\n",
+    "\n",
+    "    public abstract void MakeSound();\n",
+    "}\n",
+    "\n",
+    "public interface IWalkable\n",
+    "{\n",
+    "    void Walk();\n",
+    "}\n",
+    "\n",
+    "public interface IFlyable\n",
+    "{\n",
+    "    void Fly();\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal, IWalkable\n",
+    "{\n",
+    "    public Cat(string name, int age) : base(name, age)\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} мурчит.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Walk()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} крадется.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal, IWalkable\n",
+    "{\n",
+    "    public Dog(string name, int age) : base(name, age)\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} лает.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Walk()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} идет на прогулку.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal, IFlyable\n",
+    "{\n",
+    "    public Bird(string name, int age) : base(name, age)\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} смеётся.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Fly()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} летает по комнате.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Dog myDog = new Dog(\"Лаки\", 4);\n",
+    "myDog.MakeSound();\n",
+    "myDog.Walk();\n",
+    "\n",
+    "Cat myCat = new Cat(\"Рина\", 3);\n",
+    "myCat.MakeSound();\n",
+    "myCat.Walk();\n",
+    "\n",
+    "Bird myBird = new Bird(\"Гуми\", 3);\n",
+    "myBird.MakeSound();\n",
+    "myBird.Fly();"
+   ]
   }
  ],
  "metadata": {
