--- a/Sprint3/Task0.ipynb
+++ b/Sprint3/Task0.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -160,8 +160,98 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Лаки (Лабрадор) лает.\n",
+      "\n",
+      "Рина мяукает. (лениво)\n",
+      "\n",
+      "Гуми (размах крыльев 15.5 см) поет: чирик.\n",
+      "\n",
+      "Неизвестное животное издает звук.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    \n",
+    "    public Animal(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} издает звук.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "    \n",
+    "    public Dog(string name, string breed) : base(name)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} ({Breed}) лает.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public bool IsLazy { get; set; }\n",
+    "    \n",
+    "    public Cat(string name, bool isLazy) : base(name)\n",
+    "    {\n",
+    "        IsLazy = isLazy;\n",
+    "    }\n",
+    "    \n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} мяукает.\" + (IsLazy ? \" (лениво)\" : \"\"));\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public double Wingspan { get; set; } // размах крыльев в см\n",
+    "    \n",
+    "    public Bird(string name, double wingspan) : base(name)\n",
+    "    {\n",
+    "        Wingspan = wingspan;\n",
+    "    }\n",
+    "    \n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} (размах крыльев {Wingspan} см) поет: чирик.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "List<Animal> animals = new List<Animal>\n",
+    "{\n",
+    "    new Dog(\"Лаки\", \"Лабрадор\"),\n",
+    "    new Cat(\"Рина\", true),\n",
+    "    new Bird(\"Гуми\", 15.5),\n",
+    "    new Animal(\"Неизвестное животное\")\n",
+    "};\n",
+    "\n",
+    "foreach (var animal in animals)\n",
+    "{\n",
+    "    animal.MakeSound();\n",
+    "    Console.WriteLine(); \n",
+    "}"
+   ]
   }
  ],
  "metadata": {
