--- a/Sprint3/Task1.ipynb
+++ b/Sprint3/Task1.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -256,8 +256,159 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Животное издает звук.\n",
+      "Неизвестное животное издает звук: Ррр\n",
+      "Неизвестное животное издает звук 1 раз.\n",
+      "Неизвестное животное издает звук 2 раз.\n",
+      "Лаки (порода: Лабрадор) лает.\n",
+      "Лаки грозно рычит.\n",
+      "Рина лениво мяукает.\n",
+      "Рина издает звук: мяу\n",
+      "Гуми чирикает.\n",
+      "Гуми издает короткий звук.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "\n",
+    "    public Animal(string name, int age)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "        Age = age;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Животное издает звук.\");\n",
+    "    }\n",
+    "\n",
+    "    // Перегрузка метода MakeSound\n",
+    "    public void MakeSound(string sound)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} издает звук: {sound}\");\n",
+    "    }\n",
+    "\n",
+    "    // Перегрузка метода MakeSound с параметром int\n",
+    "    public void MakeSound(int times)\n",
+    "    {\n",
+    "        for (int i = 0; i < times; i++)\n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} издает звук {i + 1} раз.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public Dog(string name, int age, string breed) : base(name, age)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    // Переопределение метода MakeSound\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} (порода: {Breed}) лает.\");\n",
+    "    }\n",
+    "\n",
+    "    // Перегрузка метода MakeSound\n",
+    "    public void MakeSound(bool isAngry)\n",
+    "    {\n",
+    "        if (isAngry)\n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} грозно рычит.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} радостно виляет хвостом.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Cat\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public bool IsLazy { get; set; }\n",
+    "\n",
+    "    public Cat(string name, int age, bool isLazy) : base(name, age)\n",
+    "    {\n",
+    "        IsLazy = isLazy;\n",
+    "    }\n",
+    "\n",
+    "    // Переопределение метода MakeSound\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        if (IsLazy)\n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} лениво мяукает.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} активно мяукает.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public bool CanFly { get; set; }\n",
+    "\n",
+    "    public Bird(string name, int age, bool canFly) : base(name, age)\n",
+    "    {\n",
+    "        CanFly = canFly;\n",
+    "    }\n",
+    "\n",
+    "    // Переопределение метода MakeSound\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} чирикает.\");\n",
+    "    }\n",
+    "\n",
+    "    // Перегрузка метода MakeSound\n",
+    "    public void MakeSound(bool isSinging)\n",
+    "    {\n",
+    "        if (isSinging)\n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} красиво поет.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} издает короткий звук.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "Animal animal = new Animal(\"Неизвестное животное\", 3);\n",
+    "Dog dog = new Dog(\"Лаки\", 4, \"Лабрадор\");\n",
+    "Cat cat = new Cat(\"Рина\", 3, true);\n",
+    "Bird bird = new Bird(\"Гуми\", 3, true);\n",
+    "\n",
+    "// Вызов методов\n",
+    "animal.MakeSound();\n",
+    "animal.MakeSound(\"Ррр\");\n",
+    "animal.MakeSound(2);\n",
+    "\n",
+    "dog.MakeSound();\n",
+    "dog.MakeSound(true);\n",
+    "\n",
+    "cat.MakeSound();\n",
+    "cat.MakeSound(\"мяу\");\n",
+    "\n",
+    "bird.MakeSound();\n",
+    "bird.MakeSound(false);"
+   ]
   }
  ],
  "metadata": {
