--- a/Sprint3/Task2.ipynb
+++ b/Sprint3/Task2.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -208,8 +208,108 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Рина мяукает. (лениво)\n",
+      "Лаки (Лабрадор) лает.\n",
+      "Гуми (размах крыльев 15.5 см) поет: чирик.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    \n",
+    "    public Animal(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} издает звук.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "    \n",
+    "    public Dog(string name, string breed) : base(name)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} ({Breed}) лает.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public bool IsLazy { get; set; }\n",
+    "    \n",
+    "    public Cat(string name, bool isLazy) : base(name)\n",
+    "    {\n",
+    "        IsLazy = isLazy;\n",
+    "    }\n",
+    "    \n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} мяукает.\" + (IsLazy ? \" (лениво)\" : \"\"));\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public double Wingspan { get; set; } // размах крыльев в см\n",
+    "    \n",
+    "    public Bird(string name, double wingspan) : base(name)\n",
+    "    {\n",
+    "        Wingspan = wingspan;\n",
+    "    }\n",
+    "    \n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} (размах крыльев {Wingspan} см) поет: чирик.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class AnimalCollection<T> where T : Animal\n",
+    "{\n",
+    "    private List<T> _animals = new List<T>();\n",
+    "\n",
+    "    public void Add(T vehicle)\n",
+    "    {\n",
+    "        _animals.Add(vehicle);\n",
+    "    }\n",
+    "\n",
+    "    public void Remove(T vehicle)\n",
+    "    {\n",
+    "        _animals.Remove(vehicle);\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayAnimals()\n",
+    "    {\n",
+    "        foreach (var animal in _animals)\n",
+    "        {\n",
+    "            animal.MakeSound(); \n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "AnimalCollection<Animal> animals = new AnimalCollection<Animal>();\n",
+    "animals.Add(new Cat(\"Рина\", true));\n",
+    "animals.Add(new Dog(\"Лаки\", \"Лабрадор\"));\n",
+    "animals.Add(new Bird(\"Гуми\", 15.5));\n",
+    "\n",
+    "animals.DisplayAnimals();"
+   ]
   }
  ],
  "metadata": {
