--- a/Sprint4/Task0.ipynb
+++ b/Sprint4/Task0.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -287,8 +287,131 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Лаки ест.\n",
+      "Лаки с удовольствием ест косточку.\n",
+      "Лаки лает.\n",
+      "Лаки приносит палку.\n",
+      "Рина спит.\n",
+      "Рина мурлычет во сне.\n",
+      "Рина мяукает.\n",
+      "Рина залезает на дерево.\n",
+      "Гуми поет.\n",
+      "Гуми летит.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IAnimal\n",
+    "{\n",
+    "    void Eat();\n",
+    "    void Sleep();\n",
+    "    void MakeSound();\n",
+    "}\n",
+    "\n",
+    "public abstract class Animal : IAnimal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "    protected bool isSleeping;\n",
+    "\n",
+    "    public virtual void Eat()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} ест.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Sleep()\n",
+    "    {\n",
+    "        isSleeping = true;\n",
+    "        Console.WriteLine($\"{Name} спит.\");\n",
+    "    }\n",
+    "\n",
+    "    public abstract void MakeSound();\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public override void Eat()\n",
+    "    {\n",
+    "        base.Eat();\n",
+    "        Console.WriteLine($\"{Name} с удовольствием ест косточку.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} лает.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Fetch()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} приносит палку.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public bool IsLazy { get; set; }\n",
+    "\n",
+    "    public override void Sleep()\n",
+    "    {\n",
+    "        base.Sleep();\n",
+    "        Console.WriteLine($\"{Name} мурлычет во сне.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} мяукает.\");\n",
+    "    }\n",
+    "\n",
+    "    public void ClimbTree()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} залезает на дерево.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public bool CanFly { get; set; }\n",
+    "\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} поет.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Fly()\n",
+    "    {\n",
+    "        if (CanFly)\n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} летит.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} не умеет летать.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "IAnimal myDog = new Dog { Name = \"Лаки\", Age = 4, Breed = \"Лабрадор\" };\n",
+    "myDog.Eat();\n",
+    "myDog.MakeSound();\n",
+    "((Dog)myDog).Fetch();\n",
+    "\n",
+    "IAnimal myCat = new Cat { Name = \"Рина\", Age = 3, IsLazy = true };\n",
+    "myCat.Sleep();\n",
+    "myCat.MakeSound();\n",
+    "((Cat)myCat).ClimbTree();\n",
+    "\n",
+    "IAnimal myBird = new Bird { Name = \"Гуми\", Age = 3, CanFly = true };\n",
+    "myBird.MakeSound();\n",
+    "((Bird)myBird).Fly();"
+   ]
   }
  ],
  "metadata": {
