--- a/Sprint4/Task1.ipynb
+++ b/Sprint4/Task1.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -311,8 +311,117 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Лаки лает.\n",
+      "Лаки ест.\n",
+      "Лаки приносит палку.\n",
+      "Рина мяукает.\n",
+      "Рина ест.\n",
+      "Рина мурлычет.\n",
+      "Гуми чирикает.\n",
+      "Гуми ест.\n",
+      "Гуми летает, размахивая крыльями.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IAnimal\n",
+    "{\n",
+    "    string Name { get; set; }\n",
+    "    int Age { get; set; }\n",
+    "    void MakeSound();\n",
+    "    void Eat();\n",
+    "}\n",
+    "\n",
+    "public abstract class Animal : IAnimal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "    \n",
+    "    // Явная реализация метода интерфейса\n",
+    "    void IAnimal.Eat()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} ест.\");\n",
+    "    }\n",
+    "    \n",
+    "    // Абстрактный метод, который должны реализовать производные классы\n",
+    "    public abstract void MakeSound();\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "    \n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} лает.\");\n",
+    "    }\n",
+    "    \n",
+    "    public void Fetch()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} приносит палку.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public bool IsIndoor { get; set; }\n",
+    "    \n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} мяукает.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Purr()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} мурлычет.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public double Wingspan { get; set; }\n",
+    "    \n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} чирикает.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Fly()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} летает, размахивая крыльями.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "IAnimal myDog = new Dog { Name = \"Лаки\", Age = 4 };\n",
+    "myDog.MakeSound();\n",
+    "myDog.Eat();      \n",
+    "\n",
+    "if (myDog is Dog dog)\n",
+    "{\n",
+    "    dog.Fetch();\n",
+    "}\n",
+    "\n",
+    "IAnimal myCat = new Cat { Name = \"Рина\", Age = 3 };\n",
+    "myCat.MakeSound();\n",
+    "myCat.Eat();\n",
+    "if (myCat is Cat cat)\n",
+    "{\n",
+    "    cat.Purr();\n",
+    "}\n",
+    "\n",
+    "IAnimal myBird = new Bird { Name = \"Гуми\", Age = 3 };\n",
+    "myBird.MakeSound();\n",
+    "myBird.Eat();\n",
+    "if (myBird is Bird bird)\n",
+    "{\n",
+    "    bird.Fly();\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
