--- a/Sprint5/Task0.ipynb
+++ b/Sprint5/Task0.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -349,8 +349,129 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Список животных:\n",
+      "Имя: Лаки, Вид: Собака\n",
+      "Порода: Лабрадор\n",
+      "\n",
+      "Имя: Рина, Вид: Кошка\n",
+      "Домашняя кошка: True\n",
+      "\n",
+      "Имя: Гуми, Вид: Попугай Лори\n",
+      "Цвет: Красный\n",
+      "\n",
+      "Поиск животного по ключу:\n",
+      "Найденное животное:\n",
+      "Имя: Гуми, Вид: Попугай Лори\n",
+      "Цвет: Красный\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "public class Animal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public string Species { get; set; }\n",
+    "\n",
+    "    public Animal(string name, string species)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "        Species = species;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Имя: {Name}, Вид: {Species}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public Dog(string name, string species, string breed)\n",
+    "        : base(name, species)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Порода: {Breed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public bool IsIndoor { get; set; }\n",
+    "\n",
+    "    public Cat(string name, string species, bool isIndoor)\n",
+    "        : base(name, species)\n",
+    "    {\n",
+    "        IsIndoor = isIndoor;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Домашняя кошка: {IsIndoor}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public string Color { get; set; }\n",
+    "\n",
+    "    public Bird(string name, string species, string color)\n",
+    "        : base(name, species)\n",
+    "    {\n",
+    "        Color = color;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Цвет: {Color}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "List<Animal> animalList = new List<Animal>();\n",
+    "animalList.Add(new Dog(\"Лаки\", \"Собака\", \"Лабрадор\"));\n",
+    "animalList.Add(new Cat(\"Рина\", \"Кошка\", true));\n",
+    "animalList.Add(new Bird(\"Гуми\", \"Попугай Лори\", \"Красный\"));\n",
+    "\n",
+    "Console.WriteLine(\"Список животных:\");\n",
+    "foreach (var animal in animalList)\n",
+    "{\n",
+    "    animal.DisplayInfo();\n",
+    "    Console.WriteLine();\n",
+    "}\n",
+    "\n",
+    "Dictionary<string, Animal> animalDictionary = new Dictionary<string, Animal>();\n",
+    "animalDictionary.Add(\"DOG_1\", new Dog(\"Лаки\", \"Собака\", \"Лабрадор\"));\n",
+    "animalDictionary.Add(\"CAT_1\", new Cat(\"Рина\", \"Кошка\", true));\n",
+    "animalDictionary.Add(\"BIRD_1\", new Bird(\"Гуми\", \"Попугай Лори\", \"Красный\"));\n",
+    "\n",
+    "string searchKey = \"BIRD_1\";\n",
+    "Console.WriteLine(\"Поиск животного по ключу:\");\n",
+    "if (animalDictionary.TryGetValue(searchKey, out Animal foundAnimal))\n",
+    "{\n",
+    "    Console.WriteLine(\"Найденное животное:\");\n",
+    "    foundAnimal.DisplayInfo();\n",
+    "}\n",
+    "else\n",
+    "{\n",
+    "    Console.WriteLine(\"Животное не найдено\");\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
