--- a/Sprint5/Task1.ipynb
+++ b/Sprint5/Task1.ipynb
@@ -277,14 +277,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Было ли добавлено повторяющееся животное? True\n",
+      "Имя: Лаки, Возраст: 4\n",
+      "Порода: Лабрадор\n",
+      "\n",
+      "Имя: Рина, Возраст: 3\n",
+      "Цвет: Серая\n",
+      "\n",
+      "Имя: Гуми, Возраст: 3\n",
+      "Вид: Попугай Лори\n",
+      "\n",
+      "Имя: Керми, Возраст: 2\n",
+      "Порода: Борзой\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "public class Animal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "\n",
+    "    public Animal(string name, int age)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "        Age = age;\n",
+    "    }\n",
+    "\n",
+    "    public override bool Equals(object obj)\n",
+    "    {\n",
+    "        if (obj is Animal animal)\n",
+    "        {\n",
+    "            return Name == animal.Name && Age == animal.Age;\n",
+    "        }\n",
+    "        return false;\n",
+    "    }\n",
+    "\n",
+    "    public override int GetHashCode()\n",
+    "    {\n",
+    "        return HashCode.Combine(Name, Age);\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Имя: {Name}, Возраст: {Age}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public Dog(string name, int age, string breed) : base(name, age)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Порода: {Breed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public string Color { get; set; }\n",
+    "\n",
+    "    public Cat(string name, int age, string color) : base(name, age)\n",
+    "    {\n",
+    "        Color = color;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Цвет: {Color}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public string Species { get; set; }\n",
+    "\n",
+    "    public Bird(string name, int age, string species) : base(name, age)\n",
+    "    {\n",
+    "        Species = species;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Вид: {Species}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "HashSet<Animal> animals = new HashSet<Animal>();\n",
+    "\n",
+    "\n",
+    "animals.Add(new Dog(\"Лаки\", 4, \"Лабрадор\"));\n",
+    "animals.Add(new Cat(\"Рина\", 3, \"Серая\"));\n",
+    "animals.Add(new Bird(\"Гуми\", 3, \"Попугай Лори\"));\n",
+    "\n",
+    "var duplicateDog = new Dog(\"Керми\", 2, \"Борзой\");\n",
+    "bool isAdded = animals.Add(duplicateDog);\n",
+    "\n",
+    "Console.WriteLine($\"Было ли добавлено повторяющееся животное? {isAdded}\"); // false\n",
+    "\n",
+    "foreach (var animal in animals)\n",
+    "{\n",
+    "    animal.DisplayInfo();\n",
+    "    Console.WriteLine();\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
