--- a/Sprint5/Task2.ipynb
+++ b/Sprint5/Task2.ipynb
@@ -366,14 +366,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Имя: Лаки, Возраст: 4, Порода: Лабрадор\n",
+      "Это собака\n",
+      "Имя: Рина, Возраст: 3, Порода: Серая\n",
+      "Это кошка\n",
+      "Имя: Гуми, Возраст: 3, Порода: Попугай Лори\n",
+      "Это птица\n",
+      "\n",
+      "Собаки породы Лабрадор:\n",
+      "Имя: Лаки, Возраст: 4, Порода: Лабрадор\n",
+      "Это собака\n",
+      "\n",
+      "[Событие] Информация обновлена: Животное, 4 лет, порода Неизвестная\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "using System.Linq;\n",
+    "\n",
+    "\n",
+    "public delegate void DisplayDelegate();\n",
+    "\n",
+    "public class Animal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public delegate void AnimalHandler(string message);\n",
+    "    public event AnimalHandler AnimalUpdated;\n",
+    "\n",
+    "    public Animal(string name, int age, string breed)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "        Age = age;\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Имя: {Name}, Возраст: {Age}, Порода: {Breed}\");\n",
+    "    }\n",
+    "\n",
+    "    public void UpdateInfo(string newName, int newAge, string newBreed)\n",
+    "    {\n",
+    "        Name = newName;\n",
+    "        Age = newAge;\n",
+    "        Breed = newBreed;\n",
+    "\n",
+    "        AnimalUpdated?.Invoke($\"Информация обновлена: {Name}, {Age} лет, порода {Breed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public Dog(string name, int age, string breed) : base(name, age, breed) { }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine(\"Это собака\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public Cat(string name, int age, string breed) : base(name, age, breed) { }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine(\"Это кошка\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public Bird(string name, int age, string breed) : base(name, age, breed) { }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine(\"Это птица\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Dog dog1 = new Dog(\"Лаки\", 4, \"Лабрадор\");\n",
+    "Cat cat1 = new Cat(\"Рина\", 3, \"Серая\");\n",
+    "Bird bird1 = new Bird(\"Гуми\", 3, \"Попугай Лори\");\n",
+    "\n",
+    "DisplayDelegate displayDog = dog1.DisplayInfo;\n",
+    "DisplayDelegate displayCat = cat1.DisplayInfo;\n",
+    "DisplayDelegate displayBird = bird1.DisplayInfo;\n",
+    "\n",
+    "\n",
+    "displayDog();\n",
+    "displayCat();\n",
+    "displayBird();\n",
+    "\n",
+    "\n",
+    "List<Animal> animals = new List<Animal>\n",
+    "{\n",
+    "    new Dog(\"Лаки\", 4, \"Лабрадор\"),\n",
+    "    new Cat(\"Рина\", 3, \"Серая\"),\n",
+    "    new Bird(\"Гуми\", 3, \"Попугай Лори\"),\n",
+    "    new Dog(\"Керми\", 2, \"Борзой\")\n",
+    "};\n",
+    "\n",
+    "\n",
+    "var dogs = animals.OfType<Dog>().Where(d => d.Breed == \"Лабрадор\");\n",
+    "\n",
+    "Console.WriteLine(\"\\nСобаки породы Лабрадор:\");\n",
+    "foreach (var dog in dogs)\n",
+    "{\n",
+    "    dog.DisplayInfo();\n",
+    "}\n",
+    "\n",
+    "Animal animal = new Animal(\"Основное животное\", 3, \"Неизвестно\");\n",
+    "animal.AnimalUpdated += OnAnimalUpdated;\n",
+    "\n",
+    "\n",
+    "animal.UpdateInfo(\"Животное\", 4, \"Неизвестная\");\n",
+    "\n",
+    "\n",
+    "dog1.UpdateInfo(\"Лаки обновленный\", 4, \"Лабрадор\");\n",
+    "cat1.UpdateInfo(\"Рина обновленная\", 3, \"Серая\");\n",
+    "bird1.UpdateInfo(\"Гуми обновленный\", 3, \"Попугай Лори\");\n",
+    "\n",
+    "\n",
+    "\n",
+    "static void OnAnimalUpdated(string message)\n",
+    "{\n",
+    "    Console.WriteLine($\"\\n[Событие] {message}\");\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
