--- a/Sprint1/Task1.ipynb
+++ b/Sprint1/Task1.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -223,8 +223,200 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Животное: Снежок, Возраст: 4\n",
+      "Кошка: Рина, Возраст: 2, Тактильный: True\n",
+      "Собака: Лаки, Возраст: 5, Порода: Лабрадор\n",
+      "Птица: Гуми, Возраст: 3, Может летать: True\n",
+      "\n",
+      "Животное издает звук.\n",
+      "Кошка мурчит: мррр.\n",
+      "Собака лает: гав.\n",
+      "Птица поет: чирик.\n",
+      "\n",
+      "Гуми летит.\n",
+      "\n",
+      "Общее количество животных: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    private string _name;\n",
+    "    private int _age;\n",
+    "\n",
+    "    // Свойство Name с геттером и сеттером\n",
+    "    public string Name\n",
+    "    {\n",
+    "        get { return _name; }\n",
+    "        set { _name = value; }\n",
+    "    }\n",
+    "\n",
+    "    // Свойство Age с геттером и сеттером\n",
+    "    public int Age\n",
+    "    {\n",
+    "        get { return _age; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value >= 0)\n",
+    "                _age = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Возраст не может быть отрицательным!\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // Статический атрибут\n",
+    "    public static int TotalAnimals { get; private set; } = 0;\n",
+    "\n",
+    "    // Конструктор\n",
+    "    public Animal()\n",
+    "    {\n",
+    "        TotalAnimals++;\n",
+    "    }\n",
+    "\n",
+    "    // Обычный метод\n",
+    "    public void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Животное издает звук.\");\n",
+    "    }\n",
+    "\n",
+    "    // Статический метод\n",
+    "    public static void DisplayTotalAnimals()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Общее количество животных: {TotalAnimals}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    private bool _isTactile;\n",
+    "\n",
+    "    // Свойство IsTactile с геттером и сеттером\n",
+    "    public bool IsTactile\n",
+    "    {\n",
+    "        get { return _isTactile; }\n",
+    "        set { _isTactile = value; }\n",
+    "    }\n",
+    "\n",
+    "    // Конструктор\n",
+    "    public Cat() : base()\n",
+    "    {\n",
+    "        IsTactile = true; // Задаем начальное значение тактильности\n",
+    "    }\n",
+    "\n",
+    "    // Переопределение метода MakeSound\n",
+    "    public new void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кошка мурчит: мррр.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    private string _breed;\n",
+    "\n",
+    "    // Свойство Breed с геттером и сеттером\n",
+    "    public string Breed\n",
+    "    {\n",
+    "        get { return _breed; }\n",
+    "        set { _breed = value; }\n",
+    "    }\n",
+    "\n",
+    "    // Конструктор\n",
+    "    public Dog() : base()\n",
+    "    {\n",
+    "        Breed = \"Неизвестно\"; // Задаем начальное значение породы\n",
+    "    }\n",
+    "\n",
+    "    // Переопределение метода MakeSound\n",
+    "    public new void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака лает: гав.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    private bool _canFly;\n",
+    "\n",
+    "    // Свойство CanFly с геттером и сеттером\n",
+    "    public bool CanFly\n",
+    "    {\n",
+    "        get { return _canFly; }\n",
+    "        set { _canFly = value; }\n",
+    "    }\n",
+    "\n",
+    "    // Конструктор\n",
+    "    public Bird() : base()\n",
+    "    {\n",
+    "        CanFly = true; // По умолчанию птица может летать\n",
+    "    }\n",
+    "\n",
+    "    public new void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Птица поет: чирик.\");\n",
+    "    }\n",
+    "\n",
+    "    // метод для птиц\n",
+    "    public void Fly()\n",
+    "    {\n",
+    "        if (CanFly)\n",
+    "            Console.WriteLine($\"{Name} летит.\");\n",
+    "        else\n",
+    "            Console.WriteLine($\"{Name} не может летать.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Создаем объекты классов\n",
+    "Animal genericAnimal = new Animal();\n",
+    "Cat myCat = new Cat();\n",
+    "Dog myDog = new Dog();\n",
+    "Bird myBird = new Bird();\n",
+    "\n",
+    "// Устанавливаем значения свойств\n",
+    "genericAnimal.Name = \"Снежок\";\n",
+    "genericAnimal.Age = 4;\n",
+    "\n",
+    "myCat.Name = \"Рина\";\n",
+    "myCat.Age = 2;\n",
+    "myCat.IsTactile = true;\n",
+    "\n",
+    "myDog.Name = \"Лаки\";\n",
+    "myDog.Age = 5;\n",
+    "myDog.Breed = \"Лабрадор\";\n",
+    "\n",
+    "myBird.Name = \"Гуми\";\n",
+    "myBird.Age = 3;\n",
+    "myBird.CanFly = true;\n",
+    "\n",
+    "// Выводим информацию о животных\n",
+    "Console.WriteLine();\n",
+    "Console.WriteLine($\"Животное: {genericAnimal.Name}, Возраст: {genericAnimal.Age}\");\n",
+    "Console.WriteLine($\"Кошка: {myCat.Name}, Возраст: {myCat.Age}, Тактильный: {myCat.IsTactile}\");\n",
+    "Console.WriteLine($\"Собака: {myDog.Name}, Возраст: {myDog.Age}, Порода: {myDog.Breed}\");\n",
+    "Console.WriteLine($\"Птица: {myBird.Name}, Возраст: {myBird.Age}, Может летать: {myBird.CanFly}\");\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "// Вызываем методы\n",
+    "genericAnimal.MakeSound();\n",
+    "myCat.MakeSound();\n",
+    "myDog.MakeSound();\n",
+    "myBird.MakeSound();\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "// Вызываем метод Fly для птицы\n",
+    "myBird.Fly();\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "// Выводим общее количество животных\n",
+    "Animal.DisplayTotalAnimals();"
+   ]
   }
  ],
  "metadata": {
