--- a/Sprint4/Task2.ipynb
+++ b/Sprint4/Task2.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -268,8 +268,181 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Лаки гавкает!\n",
+      "Лаки ест\n",
+      "Лаки спит\n",
+      "Порода: Лабрадор\n",
+      "\n",
+      "Рина мяукает!\n",
+      "Рина ест рыбу\n",
+      "Рина спит\n",
+      "Цвет: Серая\n",
+      "\n",
+      "Гуми чирикает!\n",
+      "Гуми ест семена\n",
+      "Гуми спит\n",
+      "Вид: Попугай Лори\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "public interface IAnimal\n",
+    "{\n",
+    "    void MakeSound();\n",
+    "    void Eat();\n",
+    "    void Sleep();\n",
+    "}\n",
+    "\n",
+    "public abstract class Animal : IAnimal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "\n",
+    "    public Animal(string name, int age)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "        Age = age;\n",
+    "    }\n",
+    "\n",
+    "    public abstract void MakeSound();\n",
+    "    public abstract void Eat();\n",
+    "    public abstract void Sleep();\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public Dog(string name, int age, string breed) : base(name, age)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} гавкает!\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Eat()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} ест\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Sleep()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} спит\");\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayBreed()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Порода: {Breed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public string Color { get; set; }\n",
+    "\n",
+    "    public Cat(string name, int age, string color) : base(name, age)\n",
+    "    {\n",
+    "        Color = color;\n",
+    "    }\n",
+    "\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} мяукает!\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Eat()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} ест рыбу\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Sleep()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} спит\");\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayColor()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Цвет: {Color}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public string Species { get; set; }\n",
+    "\n",
+    "    public Bird(string name, int age, string species) : base(name, age)\n",
+    "    {\n",
+    "        Species = species;\n",
+    "    }\n",
+    "\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} чирикает!\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Eat()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} ест семена\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Sleep()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} спит\");\n",
+    "    }\n",
+    "\n",
+    "    public void DisplaySpecies()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Вид: {Species}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class AnimalService\n",
+    "{\n",
+    "    private readonly IAnimal _animal;\n",
+    "\n",
+    "    public AnimalService(IAnimal animal)\n",
+    "    {\n",
+    "        _animal = animal;\n",
+    "    }\n",
+    "\n",
+    "    public void UseAnimal()\n",
+    "    {\n",
+    "        _animal.MakeSound();\n",
+    "        _animal.Eat();\n",
+    "        _animal.Sleep();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "IAnimal myDog = new Dog(\"Лаки\", 4, \"Лабрадор\");\n",
+    "AnimalService dogService = new AnimalService(myDog);\n",
+    "dogService.UseAnimal();\n",
+    "((Dog)myDog).DisplayBreed();\n",
+    "\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "IAnimal myCat = new Cat(\"Рина\", 3, \"Серая\");\n",
+    "AnimalService catService = new AnimalService(myCat);\n",
+    "catService.UseAnimal();\n",
+    "((Cat)myCat).DisplayColor();\n",
+    "\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "\n",
+    "IAnimal myBird = new Bird(\"Гуми\", 3, \"Попугай Лори\");\n",
+    "AnimalService birdService = new AnimalService(myBird);\n",
+    "birdService.UseAnimal();\n",
+    "((Bird)myBird).DisplaySpecies();"
+   ]
   }
  ],
  "metadata": {
